--- a/.htaccess
+++ b/.htaccess
@@ -5,4 +5,16 @@ RewriteRule ^(.*)$ index.php/$1 [L]
 
 Options -Indexes
 
+# One year
+<filesMatch ".(jpg|jpeg|png|gif|svg|ico|css|js|json|woff|woff2|html)$">
+Header set Cache-Control "max-age=31536000, public"
+</filesMatch>
+
+<IfModule mod_gzip.c>
+  Header add X-Enabled mod_gzip
+</IfModule>
+<IfModule mod_deflate.c>
+  Header add X-Enabled mod_deflate
+</IfModule>
+
 Header set X-XSS-Protection "1; mode=block"
